# haskell-av-mandelbrot

./: Base.hs  ChangeLog.md  LICENSE  README.md  haskell-av-mandelbrot.cabal
src/: Base.hs  Main.hi  Main.hs  mandelbrot.avi
src/fractal-0.0.1/: Fractal.hs  LICENSE  README
src/fractal-hs/: Plot.hs  burning_ship.hs  fractal-hs.cabal  juliaset.hs  newtons_method.hs
