Name:                fractal-hs
Version:             0.1
Synopsis:            Escape-time fractals
Description:         Escape-time fractals created with Haskell and GD.
                     Includes mandlebrot, julia set, Newton's method, and
                     burning ship.  Output is to PNG.
License:             BSD3
Category:            Graphics, Math
License-file:        LICENSE
Stability:           Alpha
Author:              Greg Heartsfield
Maintainer:          Greg Heartsfield <scsibug@imap.cc>
Cabal-Version:       >= 1.2
Build-Depends:       base, gd>=3000.1.0
build-type:          Simple

source-repository head
  type:              darcs
  location:          http://gregheartsfield.com/repos/fractal-hs/

Executable           mandelbrot
  Main-is:           mandelbrot.hs
  ghc-options:       -O2 -fasm

Executable           juliaset
  Main-is:           juliaset.hs
  ghc-options:       -O2 -fasm

Executable           burning_ship
  Main-is:           burning_ship.hs
  ghc-options:       -O2 -fasm

Executable           newtons_method
  Main-is:           newtons_method.hs
  ghc-options:       -O2 -fasm
